--- a/app/templates/shop/shipping-address.html
+++ b/app/templates/shop/shipping-address.html
@@ -5,15 +5,15 @@
                 <div class="col-xs-12 col-sm-6 col-md-12">
                     <div class="form-item">
                         <label for="address1">Selecciona una direccion de envio</label>
-                        <ui-select on-select="Shipping.selectedAddress($model)"
-                                   ng-model="Shipping.formDataShip.address" id="address1" name="address1"
+                        <ui-select on-select="Payment.selectedAddress($model)"
+                                   ng-model="Payment.address" id="address1" name="address1"
                                    title="Direccion" required>
                             <ui-select-match placeholder="Selecciona una dirección de envio *..."
                                              allow-clear="true">
                                 {{$select.selected.address}}
                             </ui-select-match>
                             <ui-select-choices
-                                    repeat="address.id as address in Shipping.addresses | filter: {address: $select.search}">
+                                    repeat="address.id as address in Payment.addresses | filter: {address: $select.search}">
                                 <div ng-bind-html="address.address | highlight: $select.search"></div>
                             </ui-select-choices>
                         </ui-select>
