--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="col-md-6 address-form">
             <div class="col-md-12 select-address" style="margin-bottom: 20px">
-                <h3><a href="" ng-click="Payment.showAddress=!Payment.showAddress"><i class="fa fa-address-card"></i></a> Seleccionar dirección existente</h3>
-                <ng-include ng-if="Payment.showAddress" src="'/templates/shop/shipping-address.html'"></ng-include>
+                <h3><a href=""><i class="fa fa-address-card"></i></a> Seleccionar dirección existente</h3>
+                <ng-include src="'/templates/shop/shipping-address.html'"></ng-include>
             </div>
             <div class="col-md-12">
                 <h3><i class="fa fa-paper-plane"></i> Nueva direccíon de envío</h3>
