--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -74,7 +74,7 @@
                                                                            ng-model="Payment.payment.card.exp_month"
                                                                            name="cardExpiry"
                                                                            id="monthExpiry" placeholder="MM"
-                                                                           required data-conekta="card[number]">
+                                                                           required data-conekta="card[exp_month]">
                                                                 </div>
                                                                 <div class="col-xs-6">
                                                                     <input type="tel" class="form-control"
