initial purchase detail

--- a/app/templates/auth/history-sales.html
+++ b/app/templates/auth/history-sales.html
@@ -99,7 +99,7 @@
                         <td data-title="'Total'"><strong class="text-success">{{ sale.total | currency }}</strong></td>
                         <td data-title="'Acciones'">
                             <button title="Ver detalle de la compra" class="btn btn-primary btn-xs"
-                                    ui-sref="sale-update({id: sale.id})" data-title="Edit">
+                                    ui-sref="purchase-detail({id: sale.id})" data-title="Edit">
                                 <span class="glyphicon glyphicon-eye-open"></span></button>
                     </tr>
                     </tbody>
